--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>VSCode has a build in support for Git</h1>
     <p>Learn how to use it by following this tutorial by JohnK.</p>
-    <p>Hello everyones!!</p>
     <p>Hello again!</p>
-    <p>Somebody else was here!</p>
+    <p>Somebody else was here changing this again!</p>
     <p>Hello from John</p>
+    <p>Also addded this line</p>
 </body>
 </html>
