--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Hello again!</p>
     <p>Somebody else was here!</p>
     <p>Hello from John</p>
+    <p>Try to modify line16 from VS Code</p>
 </body>
 </html>
